[Blink] Add fixed-pos counterscroll in PaintLayerClipper for RLS mode

The caller of PaintLayerClipper expects the returned clip rect to be in
the scrolled space of LayoutView, while the computed clip rect for a
fixed-pos layer is in the unscrolled space prior to compensation. The
fixed-pos compensation has been done for non-RLS mode, this CL adds the
RLS counterpart.

BUG=821279

Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I48a92d0614d97c745fe66b1265dce0613514ffc4
Reviewed-on: https://chromium-review.googlesource.com/961643
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Commit-Queue: Tien-Ren Chen <trchen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#543584}
Former-commit-id: d09d2073659030ed2d5ea3f3b8331583d46796c0